--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,16 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".StaggeredGridActivity">
-        </activity>
-        <activity android:name=".GridActivity">
-        </activity>
-        <activity android:name=".LinearSectionActivity">
-        </activity>
-        <activity android:name=".LinearActivity">
-        </activity>
+        <activity android:name=".activity.VerticalLinearActivity"/>
+        <activity android:name=".activity.VerticalSectionLinearActivity"/>
+        <activity android:name=".activity.HorizontalLinearActivity"/>
+        <activity android:name=".activity.HorizontalSectionLinearActivity"/>
+        <activity android:name=".activity.VerticalGridActivity"/>
+        <activity android:name=".activity.VerticalSectionGridActivity"/>
+        <activity android:name=".activity.HorizontalGridActivity"/>
+        <activity android:name=".activity.HorizontalSectionGridActivity"/>
+        <activity android:name=".activity.VerticalStaggeredGridActivity"/>
+        <activity android:name=".activity.HorizontalStaggeredGridActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
