--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.44'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation project(':itemdecoration')
+//    implementation 'com.github.zyyoona7:recyclerviewdivider:1.0.0'
+
 }
