--- a/itemdecoration/build.gradle
+++ b/itemdecoration/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
-apply plugin: "guru.stefma.bintrayrelease"
+apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 28
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.2"
     }
 
     buildTypes {
@@ -32,17 +32,15 @@ repositories {
     mavenCentral()
 }
 
-//版本号 version code
-version = "1.0.1"
-//JCenter上显示的路径 path
-group = "com.github.zyyoona7"
-//项目名称 project name
-androidArtifact { // 2
-    artifactId = "recyclerviewdivider"
-}
 publish {
     //bintray.com 用户名/组织名 user/org name
     userOrg = 'zyyoona7'
+    //JCenter上显示的路径 path
+    groupId = 'com.github.zyyoona7'
+    //项目名称 project name
+    artifactId = 'recyclerviewdivider'
+    //版本号 version code
+    publishVersion = '1.0.2'
     //项目描述 description
     desc = 'itemDecoration for LinearLayoutManager,GridLayoutManager,StaggeredGridLayoutManager.'
     //项目网址链接 link
