--- a/itemdecoration/build.gradle
+++ b/itemdecoration/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
-apply plugin: 'com.novoda.bintray-release'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 28
@@ -24,25 +24,27 @@ android {
 
 dependencies {
     compileOnly fileTree(dir: 'libs', include: ['*.jar'])
-    compileOnly 'com.android.support:appcompat-v7:28.0.0'
-    compileOnly 'com.android.support:recyclerview-v7:28.0.0'
+    compileOnly 'androidx.appcompat:appcompat:1.0.0'
+    compileOnly 'androidx.recyclerview:recyclerview:1.0.0'
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 repositories {
     mavenCentral()
 }
 
-publish {
-    //bintray.com 用户名/组织名 user/org name
-    userOrg = 'zyyoona7'
-    //JCenter上显示的路径 path
-    groupId = 'com.github.zyyoona7'
-    //项目名称 project name
-    artifactId = 'recyclerviewdivider'
-    //版本号 version code
-    publishVersion = '1.0.2'
-    //项目描述 description
-    desc = 'itemDecoration for LinearLayoutManager,GridLayoutManager,StaggeredGridLayoutManager.'
-    //项目网址链接 link
-    website = 'https://github.com/zyyoona7/RecyclerViewItemDecoration'
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release
+
+                // You can then customize attributes of the publication as shown below.
+                groupId = 'com.github.zyyoona7'
+                artifactId = 'recyclerviewdivider'
+                version = '1.0.2'
+            }
+        }
+    }
 }
